--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,4 @@ jobs:
         key: ${{ secrets.KEY }}
         port: ${{ secrets.PORT }}
         script: |
-          source /home/work/bin/activate
-          cd /home/work/Github_Action_Test
-          git pull origin
-          python3 manage.py runserver
+          whoami
