--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,30 @@ jobs:
           cd work/Github_Action_Test
           ls -al
           git pull
-          python manage.py runserver
+
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v3
+    
+    - name: Run Test
+      run: |
+        python3 manage.py test
+    
+#     runs-on: ubuntu-latest
+#     strategy:
+#       max-parallel: 4
+#       matrix:
+#         python-version: [3.7, 3.8, 3.9]
+
+#     steps:
+#     - uses: actions/checkout@v3
+#     - name: Set up Python ${{ matrix.python-version }}
+#       uses: actions/setup-python@v3
+#       with:
+#         python-version: ${{ matrix.python-version }}
+#     - name: Install Dependencies
+#       run: |
+#         python -m pip install --upgrade pip
+#         pip install -r requirements.txt
+#     - name: Run Tests
+#       run: |
+#         python manage.py test
