--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v3
+      
     - name: executing remote ssh commands using key
       uses: appleboy/ssh-action@master
       with:
@@ -21,13 +25,8 @@ jobs:
           cd Github_Action_Test
           ls -al
           git pull
+          python3 manage.py runserver
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-    
-    - name: Run Test
-      run: |
-        python3 manage.py test
     
 #     runs-on: ubuntu-latest
 #     strategy:
