--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,13 +19,11 @@ jobs:
         key: ${{ secrets.KEY }}
         port: ${{ secrets.PORT }}
         script: |
-          ls -al
           cd work
           source venv/bin/activate
           cd Github_Action_Test
-          ls -al
           git pull
-          python3 manage.py runserver
+          python3 manage.py runserver 0:1234
 
     
 #     runs-on: ubuntu-latest
